--- a/templates/search_query_apply.tmpl
+++ b/templates/search_query_apply.tmpl
@@ -1,7 +1,7 @@
 {{- /* The line below tells Intellij/GoLand to enable the autocompletion based on the *gen.Graph type. */ -}}
 {{- /* gotype: entgo.io/ent/entc/gen.Graph */ -}}
 
-{{- define "serach_query_apply" -}}
+{{- define "search_query_apply" -}}
 
 {{- /* Add the base header for the generated file */ -}}
 
