--- a/refine-templates/Index.gohtml
+++ b/refine-templates/Index.gohtml
@@ -1,4 +1,4 @@
-{{- /* gotype: github.com/entkit/entkit.UI */ -}}
+{{- /* gotype: github.com/entkit/entkit.Generator */ -}}
 
 {{- define "public/index.html" -}}
 <!DOCTYPE html>
