entkit/templates: ensure importing correct field types

--- a/templates/search_query_apply.tmpl
+++ b/templates/search_query_apply.tmpl
@@ -6,8 +6,10 @@
 {{- /* Add the base header for the generated file */ -}}
 
 {{ template "header" $ }}
-
-import "context"
+import (
+	"context"
+	{{ range $.Nodes }}{{ template "import/types" . }}{{ end }}
+)
 
 {{ range $n := $.Nodes }}
 	{{- $builder := print $n.Name "WhereInput" }}
