Improved code generation, Keycloak initialization, Resources and scopes generation

--- a/server-templates/Main.tmpl
+++ b/server-templates/Main.tmpl
@@ -30,7 +30,7 @@ import (
 
 func main() {
     app := cli.NewApp()
-    app.Name = "EntKit APP"
+    app.Name = "entkit"
     app.Version = "0.1.0"
     app.Description = "This is EntKit CLI"
     app.Authors = []*cli.Author{
