--- a/templates/auth.tmpl
+++ b/templates/auth.tmpl
@@ -8,7 +8,7 @@ import (
 	"context"
 	"errors"
 	"fmt"
-	"github.com/entkit/entkit"
+	"github.com/entkit/entkit/v2"
 )
 {{- $auth := $.Config.Annotations.ENTKIT.Auth }}
 {{- $prefix := $.Annotations.ENTKIT.Prefix}}
